--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "GoogleReCaptcha": {
+    "SiteKey": "6Le5TigkAAAAAH6WSL1Duk-xgUgp3hv3Y_KlfRGB",
+    "SecretKey": "6Le5TigkAAAAAN5RMQ-Irw20a9w0TnW8_u_TrSCE",
+    "Version": "v3"
   }
 }
